--- a/processed/style.css
+++ b/processed/style.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 div#content {
-	width: 900px;
+	width: 1000px;
 	margin: 50px auto;
 	background-color: #111;
 	padding: 50px;
@@ -39,6 +39,9 @@ table td {
 }
 table td.right {
 	text-align: right;
+}
+table th.graph {
+	width: 500px;
 }
 
 div.bar {
