stats server, with hour breakdown

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>discord - programming</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 	<div id="content">
@@ -12,6 +12,13 @@
 		<h2>by month:</h2>
 		<table id="months">
 			<th>month</th>
+			<th>messages</th>
+			<th></th>
+		</table>
+
+		<h2>by hour (UTC):</h2>
+		<table id="hours">
+			<th>hour</th>
 			<th>messages</th>
 			<th></th>
 		</table>
@@ -28,6 +35,6 @@
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.js"></script>
-	<script src="ddd.js"></script>
+	<script src="/static/ddd.js"></script>
 </body>
 </html>
