channel/user filters

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 	<div id="content">
-		<h1>discord - programming - all channels</h1>
+		<h1>discord - programming</h1>
+
+		<form>
+			channel: <select id="channel">
+				<option value="">[all]</option>
+			</select>
+			user: <select id="user">
+				<option value="">[all]</option>
+			</select>
+		</form>
 
 		<h2>by month:</h2>
 		<table id="months">
