stats by channel

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,26 +19,35 @@
 		</form>
 
 		<h2>by month:</h2>
-		<table id="months">
+		<table id="by_month">
 			<th>month</th>
 			<th>messages</th>
 			<th></th>
 		</table>
 
 		<h2>by hour (UTC):</h2>
-		<table id="hours">
+		<table id="by_hour">
 			<th>hour</th>
 			<th>messages</th>
 			<th></th>
 		</table>
 
-		<h2>all time:</h2>
-		<table id="all_time">
+		<h2>by user:</h2>
+		<table id="by_user">
 			<th>rank</th>
 			<th>user</th>
 			<th>messages</th>
 			<th>percentage</th>
 			<th><div class="bar filler" style="width: 500px"></div></th>
+			<th></th>
+		</table>
+
+		<h2>by channel:</h2>
+		<table id="by_channel">
+			<th>rank</th>
+			<th>user</th>
+			<th>messages</th>
+			<th>percentage</th>
 			<th></th>
 		</table>
 	</div>
