--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,10 @@
 			<th>percentage</th>
 			<th></th>
 		</table>
+
+		<p>
+			<a href="https://github.com/raylu/ddd" class="github">github.com/raylu/ddd</a>
+		</p>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.js"></script>
