fix percentages when filtering for by_user and by_channel

--- a/static/style.css
+++ b/static/style.css
@@ -40,6 +40,9 @@ table tr:nth-child(even) {
 }
 table td {
 	padding: 2px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 table td.right {
 	text-align: right;
