reduce width of by users table

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 			<th>user</th>
 			<th>messages</th>
 			<th>percentage</th>
-			<th><div class="bar filler" style="width: 500px"></div></th>
+			<th><div class="bar filler header"></div></th>
 			<th></th>
 		</table>
 
