--- a/static/style.css
+++ b/static/style.css
@@ -59,6 +59,9 @@ div.bar {
 div.bar.filler {
 	background-color: #333;
 }
+div.bar.filler.header {
+	width: 400px;
+}
 
 a.github {
 	font-family: monospace;
