--- a/static/style.css
+++ b/static/style.css
@@ -66,3 +66,13 @@ div.bar.filler.header {
 a.github {
 	font-family: monospace;
 }
+
+div#simulation div.line {
+    margin: 0.5em 0;
+}
+div#simulation div.line div.username {
+    display: inline-block;
+    margin-right: 5px;
+    color: #7ac;
+    font-weight: bold;
+}
