--- a/templates/index.html
+++ b/templates/index.html
@@ -1,62 +1,58 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>discord - programming</title>
-	<link rel="stylesheet" href="/static/style.css">
+{% extends 'base.html' %}
+
+{% block head %}
 	<link rel="stylesheet" href="/static/dropdown.css">
-</head>
-<body>
-	<div id="content">
-		<h1>discord - programming</h1>
+{% endblock head %}
 
-		<p>
-		<form>
-			channel: <div id="channel"></div>
-			user: <div id="user"></div>
-		</form>
-		</p>
-
-		<h2>by month:</h2>
-		<table id="by_month">
-			<th>month</th>
-			<th>messages</th>
-			<th></th>
-		</table>
-
-		<h2>by hour (UTC):</h2>
-		<table id="by_hour">
-			<th>hour</th>
-			<th>messages</th>
-			<th></th>
-		</table>
-
-		<h2>by user:</h2>
-		<table id="by_user">
-			<th>rank</th>
-			<th>user</th>
-			<th>messages</th>
-			<th>percentage</th>
-			<th><div class="bar filler header"></div></th>
-			<th></th>
-		</table>
-
-		<h2>by channel:</h2>
-		<table id="by_channel">
-			<th>rank</th>
-			<th>user</th>
-			<th>messages</th>
-			<th>percentage</th>
-			<th></th>
-		</table>
-
-		<p>
-			<a href="https://github.com/raylu/ddd" class="github">github.com/raylu/ddd</a>
-		</p>
-	</div>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.js"></script>
+{% block scripts %}
 	<script src="/static/dropdown.js"></script>
 	<script src="/static/ddd.js"></script>
-</body>
-</html>
+{% endblock scripts %}
+
+{% block content %}
+	<a href="/markov">markov simulation</a>
+
+	<p>
+	<form>
+		channel: <div id="channel"></div>
+		user: <div id="user"></div>
+	</form>
+	</p>
+
+	<h2>by month:</h2>
+	<table id="by_month">
+		<th>month</th>
+		<th>messages</th>
+		<th></th>
+	</table>
+
+	<h2>by hour (UTC):</h2>
+	<table id="by_hour">
+		<th>hour</th>
+		<th>messages</th>
+		<th></th>
+	</table>
+
+	<h2>by user:</h2>
+	<table id="by_user">
+		<th>rank</th>
+		<th>user</th>
+		<th>messages</th>
+		<th>percentage</th>
+		<th><div class="bar filler header"></div></th>
+		<th></th>
+	</table>
+
+	<h2>by channel:</h2>
+	<table id="by_channel">
+		<th>rank</th>
+		<th>user</th>
+		<th>messages</th>
+		<th>percentage</th>
+		<th></th>
+	</table>
+
+	<p>
+		<a href="https://github.com/raylu/ddd" class="github">github.com/raylu/ddd</a>
+	</p>
+{% endblock content %}
