disable loading markov

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 {% endblock scripts %}
 
 {% block content %}
-	<a href="/markov">markov simulation</a>
+	{# <a href="/markov">markov simulation</a> #}
 
 	<p>
 	<form>
