display guild metadata

--- a/templates/guild.html
+++ b/templates/guild.html
@@ -10,6 +10,8 @@
 {% endblock scripts %}
 
 {% block content %}
+	<h1><a href="/">discord</a> - {{ guild.name }}</h1>
+
 	<a href="/markov">markov simulation</a>
 
 	<p>
