per-guild markov simulations

--- a/templates/guild.html
+++ b/templates/guild.html
@@ -12,7 +12,7 @@
 {% block content %}
 	<h1><a href="/">discord</a> - {{ guild.name }}</h1>
 
-	<a href="/markov">markov simulation</a>
+	<a href="markov">markov simulation</a>
 
 	<p>
 	<form>
