--- a/templates/markov.html
+++ b/templates/markov.html
@@ -9,7 +9,7 @@
 {% endblock scripts %}
 
 {% block content %}
-	<a href="/">stats</a>
+	<a href="/guild/{{ guild_id }}/">stats</a>
 
 	<div id="simulation">
 	</div>
