--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>discord - programming</title>
+	<title>{% block title %}discord data delver{% endblock title %}</title>
 	<link rel="stylesheet" href="/static/style.css">
 	{% block head %}{% endblock head %}
 </head>
