--- a/templates/guild.html
+++ b/templates/guild.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}discord &ndash; {{ guild.name }}{% endblock title %}
+
 {% block head %}
 	<link rel="stylesheet" href="/static/dropdown.css">
 {% endblock head %}
@@ -10,7 +12,7 @@
 {% endblock scripts %}
 
 {% block content %}
-	<h1><a href="/">discord</a> - {{ guild.name }}</h1>
+	<h1><a href="/">discord</a> &ndash; {{ guild.name }}</h1>
 
 	<a href="markov">markov simulation</a>
 
