--- a/templates/markov.html
+++ b/templates/markov.html
@@ -13,6 +13,5 @@
 {% block content %}
 	<a href="/guild/{{ guild.guild_id }}/">stats</a>
 
-	<div id="simulation">
-	</div>
+	<div id="simulation"></div>
 {% endblock content %}
