--- a/templates/guild.html
+++ b/templates/guild.html
@@ -7,8 +7,7 @@
 {% endblock head %}
 
 {% block scripts %}
-	<script src="/static/dropdown.js"></script>
-	<script src="/static/ddd.js"></script>
+	<script src="/static/ddd.js" type="module"></script>
 {% endblock scripts %}
 
 {% block content %}
