--- a/templates/guild.html
+++ b/templates/guild.html
@@ -17,13 +17,11 @@
 		<a href="markov">markov simulation</a>
 	{% endif %}
 
-	<p>
 	<form>
 		channel: <div id="channel"></div>
 		user: <div id="user"></div>
-		month: <div id="month"></div>
+		dates: <date-picker id="dates"></date-picker>
 	</form>
-	</p>
 
 	<h2>by month:</h2>
 	<table id="by_month">
