--- a/templates/guild.html
+++ b/templates/guild.html
@@ -8,6 +8,7 @@
 
 {% block scripts %}
 	<script src="/static/ddd.js" type="module"></script>
+	<script src="/static/message_graph.js" type="module"></script>
 {% endblock scripts %}
 
 {% block content %}
@@ -29,6 +30,7 @@
 		<th>messages</th>
 		<th></th>
 	</table>
+	<message-graph name="month" id="month_graph"></message-graph>
 
 	<h2>by hour (UTC):</h2>
 	<table id="by_hour">
@@ -36,6 +38,7 @@
 		<th>messages</th>
 		<th></th>
 	</table>
+	<message-graph name="hour" id="hour_graph"></message-graph>
 
 	<h2>by user:</h2>
 	<table id="by_user">
