show rank and percentage for user/channel graphs

--- a/templates/guild.html
+++ b/templates/guild.html
@@ -53,9 +53,10 @@
 	<h2>by channel:</h2>
 	<table id="by_channel">
 		<th>rank</th>
-		<th>user</th>
+		<th>channel</th>
 		<th>messages</th>
 		<th>percentage</th>
 		<th></th>
 	</table>
+	<message-graph name="channel" id="channel_graph" percentageColumn></message-graph>
 {% endblock content %}
