message graph parity

--- a/templates/guild.html
+++ b/templates/guild.html
@@ -49,6 +49,7 @@
 		<th><div class="bar filler header"></div></th>
 		<th></th>
 	</table>
+	<message-graph name="user" id="user_graph" percentageColumn cumulative></message-graph>
 
 	<h2>by channel:</h2>
 	<table id="by_channel">
