--- a/templates/guild.html
+++ b/templates/guild.html
@@ -22,6 +22,8 @@
 		channel: <div id="channel"></div>
 		user: <div id="user"></div>
 		dates: <date-picker id="dates"></date-picker>
+		channel: <lit-dropdown id="channel_dropdown"></lit-dropdown>
+		user: <lit-dropdown id="user_dropdown"></lit-dropdown>
 	</form>
 
 	<h2>by month:</h2>
