get rid of moodropdown

--- a/templates/emoji.html
+++ b/templates/emoji.html
@@ -7,6 +7,7 @@
 {% endblock head %}
 
 {% block scripts %}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.js"></script>
 	<script src="/static/emoji.js"></script>
 {% endblock scripts %}
 
